--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "mapbox-gl": "^3.3.0",
+    "owl.carousel": "^2.3.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-map-gl": "^7.1.7",
+    "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
